[package]
name = "releaser"
version = "0.1.0"
edition = "2024"
rust-version = "1.86"


[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
regex = "1.9.1"
semver = "0.7.0"
self-replace = "1.3.5"
colored = "2.0.0"
open = "5.0.0"
anyhow = "1.0.71"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = { version = "1.72.0", features = ["behavior-version-latest"] }
authorizer = { git = "https://github.com/tc-functors/tc.git", rev = "9241bc0"}
tagger = { git = "https://github.com/tc-functors/tc.git", rev = "9241bc0"}
kit = { git = "https://github.com/tc-functors/kit.git", rev = "c56968d"}
